--- a/src/rootes/GamePage/style.module.css
+++ b/src/rootes/GamePage/style.module.css
@@ -4,3 +4,16 @@
     align-items: center;
     flex-wrap: wrap;
   }
+  
+  .button {
+    background-color: #c9468c;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    margin: auto;
+    display: block;
+    margin-top: 20px
+}
