--- a/src/components/PokemonCard/style.module.css
+++ b/src/components/PokemonCard/style.module.css
@@ -21,13 +21,6 @@
     transition: .6s .1s;
     transform: rotateY(180deg);
 }
-
-.size{
-    width: 250px;
-    height: 400px;
-
-}
-
 .pokemonCard.active {
     animation: flipFront 1000ms 300ms forwards;
 }
@@ -42,7 +35,8 @@
 }
 
 .pokemonCard.selected {
-    margin-top: -40px;
+    margin-top: -20px;
+    margin-bottom: 20px;
 }
 
 .cardFront,
