--- a/src/rootes/GamePage/rootes/StartPage/style.module.css
+++ b/src/rootes/GamePage/rootes/StartPage/style.module.css
@@ -1,19 +1,24 @@
 .flex {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-  }
-  
-  .button {
-    background-color: #c9468c;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    font-size: 16px;
-    margin: auto;
-    display: block;
-    margin-top: 20px
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-gap: 40px;
+}
+
+.button {
+  background-color: #c9468c;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  margin: auto;
+  display: block;
+  margin-top: 20px
+}
+
+.card {
+  width: 100%;
+  height: 380px;
+  cursor: pointer;
 }
