Доработала страницу finish. Сверху мои покемоны, снизу соперника. Между ними кнопка конец игры. Если я выиграла, то могу выбрать карту из карт соперника. При нажатии на кнопку конец игры эта карта сохрвняется в бд. В id записываю ключ для уникальности. Контекст очищаю. Добавила Проверку, что по прямой ссылке на эту страницу нельзя попасть. На странице игры только один участник может ходить за 1 ход. Начинающий рандомно выбирается, стрелка рисуется.

--- a/src/components/PokemonCard/style.module.css
+++ b/src/components/PokemonCard/style.module.css
@@ -22,7 +22,7 @@
     transform: rotateY(180deg);
 }
 .pokemonCard.active {
-    animation: flipFront 1000ms 300ms forwards;
+    transform: rotateY(0deg);
 }
 
 @keyframes flipFront {
@@ -158,6 +158,12 @@
 }
 .normal {
     background-color: var(--normal);
+}
+.blue{
+    background-color: #a8caea;
+}
+.red{
+    background-color: #d998b2;
 }
 
 .pokemon .imgContainer {
