--- a/src/components/LoginForm/style.module.css
+++ b/src/components/LoginForm/style.module.css
@@ -51,3 +51,8 @@ button:disabled:hover {
     border: 1px solid transparent;
     color: #fafafa;
 }
+
+a{
+    color: #f300b4;
+    float: right;
+}
